pics added in volunteering

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
                 <span>University of Maryland</span>
                 <span>College Park, MD</span>
               </div>
-              <div class="meta-dates">[Start – End dates]</div>
+              <div class="meta-dates">[August 2025 – December 2025]</div>
             </div>
           </div>
           <ul class="list">
@@ -411,7 +411,7 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
                 <span>University of Maryland</span>
                 <span>College Park, MD</span>
               </div>
-              <div class="meta-dates">[Start – End dates]</div>
+              <div class="meta-dates">[January 2025 – May 2025]</div>
             </div>
           </div>
           <ul class="list">
@@ -431,7 +431,7 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
                 <span>Accenture</span>
                 <span>Pharma Client • AWS</span>
               </div>
-              <div class="meta-dates">[Start – End dates]</div>
+              <div class="meta-dates">[October 2022 – August 2023]</div>
             </div>
           </div>
           <ul class="list">
@@ -451,7 +451,7 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
                 <span>BSNL</span>
                 <span>Hyderabad, India</span>
               </div>
-              <div class="meta-dates">[Start – End dates]</div>
+              <div class="meta-dates">[March 2021 – April 2021]</div>
             </div>
           </div>
           <ul class="list">
@@ -474,7 +474,7 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
             <div class="card-title">M.Eng., Software Engineering</div>
             <div class="meta-line">
               <span>University of Maryland, College Park</span>
-              <span>Expected Dec 2025</span>
+              <span>January 2024 - Dec 2025</span>
             </div>
           </div>
         </div>
@@ -491,7 +491,7 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
             <div class="card-title">Graduate Certificate, Data Science</div>
             <div class="meta-line">
               <span>University of Maryland, College Park</span>
-              <span>May 2025</span>
+              <span>August 2023 - May 2024</span>
             </div>
           </div>
         </div>
@@ -507,7 +507,7 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
             <div class="card-title">B.Tech, Electronics and Communication Engineering</div>
             <div class="meta-line">
               <span>Mahatma Gandhi Institute of Technology, Hyderabad</span>
-              <span>July 2022</span>
+              <span>July 2018 - July 2022</span>
             </div>
           </div>
         </div>
@@ -516,28 +516,69 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
 
     <!-- VOLUNTEERING -->
     <section id="volunteering" data-fade="3">
-      <h2><span class="section-kicker">Service</span>Volunteering</h2>
+      <h2>Volunteering</h2>
+
+      <style>
+        .vol-header{
+          display:flex;
+          align-items:flex-start;
+          gap:12px;
+          margin-bottom:6px;
+        }
+        .vol-logo{
+          width:42px;
+          height:42px;
+          object-fit:contain;
+          border-radius:14px;
+          background:#050505;
+          padding:5px;
+          border:1px solid rgba(212,175,55,.7);
+          box-shadow:0 0 12px rgba(212,175,55,.25);
+        }
+      </style>
 
       <div class="card">
-        <div class="card-title">Graduate Student Senator — Engineering Graduate Student Society (UMD)</div>
+        <div class="vol-header">
+          <img class="vol-logo" src="assets/logo-umd.jpeg"
+               alt="EGSS / UMD logo"
+               onerror="this.style.display='none'">
+          <div>
+            <strong>Graduate Student Senator — Engineering Graduate Student Society (University of Maryland)</strong>
+          </div>
+        </div>
         <ul class="list">
-          <li>Elected as the Master’s Representative to the EGSS Council, representing graduate students in the A. James Clark School of Engineering.</li>
-          <li>Assess and present student concerns on safety, working conditions, and departmental relationships to the Dean and administration.</li>
-          <li>Collaborate with representatives across departments to promote educational and social initiatives.</li>
-          <li>Support diversity and inclusion goals through policy discussions and community engagement.</li>
+          <li>Elected as the Master’s Representative to the EGSS Council, representing the interests of graduate
+              students in the A. James Clark School of Engineering.</li>
+          <li>Actively assess and present student concerns about safety, working conditions, and departmental
+              relationships with the Dean and administration.</li>
+          <li>Collaborate with representatives from all engineering departments to promote educational and social
+              initiatives that enhance the graduate student experience.</li>
+          <li>Support university-wide diversity and inclusion goals by contributing to policy discussions and
+              community engagement activities.</li>
         </ul>
       </div>
 
       <div class="card">
-        <div class="card-title">National Cadet Corps (India) — Cadet</div>
+        <div class="vol-header">
+          <img class="vol-logo" src="assets/logo-ncc.jpeg"
+               alt="NCC logo"
+               onerror="this.style.display='none'">
+          <div>
+            <strong>National Cadet Corps (India) — Cadet</strong>
+          </div>
+        </div>
         <ul class="list">
-          <li>Completed training in leadership, discipline, and teamwork through structured drills and exercises.</li>
-          <li>Participated in camps and parades, demonstrating commitment to national service and civic responsibility.</li>
-          <li>Contributed 50+ hours to community service and public awareness initiatives.</li>
-          <li>Learned fundamentals of naval operations including navigation, seamanship, and survival skills.</li>
+          <li>Completed rigorous training in leadership, discipline, and teamwork through structured drills and
+              exercises.</li>
+          <li>Participated in multiple camps and parades, demonstrating commitment to national service and civic
+              responsibility.</li>
+          <li>Participated in community service initiatives, contributing 50+ hours to social welfare and public
+              awareness programs.</li>
+          <li>Learned the fundamentals of naval operations, including navigation, seamanship, and survival skills.</li>
         </ul>
       </div>
     </section>
+
 
     <!-- CERTIFICATIONS -->
     <section id="certs" data-fade="3">
