--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
 
     <!-- VOLUNTEERING -->
     <section id="volunteering" data-fade="3">
-      <h2>Volunteering</h2>
+      <h2><span class="section-kicker">Leadership & Service</span>VOLUNTEERING</h2>
 
       <style>
         .vol-header{
