--- a/index.html
+++ b/index.html
@@ -614,14 +614,14 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
           .icon-link.linkedin .core{fill:#0A66C2}/* LinkedIn blue */
         </style>
         <div class="icon-row">
-          <a class="icon-link" href="https://github.com/nk-kaushik" target="_blank" rel="noopener">
+          /* <a class="icon-link" href="https://github.com/nk-kaushik" target="_blank" rel="noopener">
             <span class="icon" aria-hidden="true">
               <svg viewBox="0 0 24 24" role="img" aria-label="GitHub">
                 <path class="core" d="M12 .5a12 12 0 0 0-3.79 23.4c.6.11.82-.26.82-.58v-2.02c-3.34.73-4.04-1.61-4.04-1.61-.55-1.39-1.34-1.76-1.34-1.76-1.1-.76.08-.75.08-.75 1.22.08 1.86 1.26 1.86 1.26 1.08 1.85 2.83 1.31 3.52 1 .11-.79.42-1.31.76-1.61-2.66-.3-5.46-1.33-5.46-5.9 0-1.3.47-2.37 1.25-3.2-.13-.31-.54-1.56.12-3.25 0 0 1.01-.32 3.3 1.22a11.5 11.5 0 0 1 6 0c2.29-1.54 3.3-1.22 3.3-1.22.66 1.69.25 2.94.12 3.25.78.83 1.25 1.9 1.25 3.2 0 4.58-2.8 5.6-5.47 5.9.43.37.81 1.1.81 2.22v3.29c0 .32.22.69.82.58A12 12 0 0 0 12 .5z"/>
               </svg>
             </span>
             <span>github.com/nk-kaushik</span>
-          </a>
+          </a> */
 
           <a class="icon-link linkedin" href="https://www.linkedin.com/in/n-k-kaushik-21nkk/" target="_blank" rel="noopener">
             <span class="icon" aria-hidden="true">
