--- a/index.html
+++ b/index.html
@@ -582,11 +582,15 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
 
     <!-- CERTIFICATIONS -->
     <section id="certs" data-fade="3">
-      <h2><span class="section-kicker">Skills</span>Certifications</h2>
+      <h2><span class="section-kicker">Certifications</span>Skills</h2>
       <div class="card">
         <ul class="list">
-          <li>Oracle PL/SQL (training) — Accenture</li>
-          <li>AWS fundamentals / ETL (coursework & project experience)</li>
+          <li> Programming Languages: C, HTML, CSS, Bootstrap, Java, Python, SQL, R, Bash</li>
+          <li>Data Science and BI Tools: Pandas, Numpy, Scikit-learn, TensorFlow, Pytorch, Keras, Matplotlib, Seaborn, Plotly, Tableau, Power BI</li>
+          <li>Web: DJango, JQuery, Javascript, AWS(EC2, S3, Redshift), Flask</li>
+          <li>Databases: MySQL, Oracle, MongoDB, PySpark, Apache, Hadoop, Kafka</li>
+          <li>Version Control, CI/CD: Git, GitHub, Jenkins, Docker, Kubernetes, MLflow</li>
+          <li>Misc: Teamwork, Leadership, Problem-Solving, Professional Communication, Data Storytelling, Business Acumen</li>
         </ul>
       </div>
     </section>
