skills section changes

--- a/index.html
+++ b/index.html
@@ -585,12 +585,12 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
       <h2><span class="section-kicker">Certifications</span>Skills</h2>
       <div class="card">
         <ul class="list">
-          <li> Programming Languages: C, HTML, CSS, Bootstrap, Java, Python, SQL, R, Bash</li>
-          <li>Data Science and BI Tools: Pandas, Numpy, Scikit-learn, TensorFlow, Pytorch, Keras, Matplotlib, Seaborn, Plotly, Tableau, Power BI</li>
-          <li>Web: DJango, JQuery, Javascript, AWS(EC2, S3, Redshift), Flask</li>
-          <li>Databases: MySQL, Oracle, MongoDB, PySpark, Apache, Hadoop, Kafka</li>
-          <li>Version Control, CI/CD: Git, GitHub, Jenkins, Docker, Kubernetes, MLflow</li>
-          <li>Misc: Teamwork, Leadership, Problem-Solving, Professional Communication, Data Storytelling, Business Acumen</li>
+          <li><strong>Programming Languages:</strong> C, HTML, CSS, Bootstrap, Java, Python, SQL, R, Bash</li>
+          <li><strong>Data Science and BI Tools:</strong> Pandas, Numpy, Scikit-learn, TensorFlow, Pytorch, Keras, Matplotlib, Seaborn, Plotly, Tableau, Power BI</li>
+          <li><strong>Web:</strong> DJango, JQuery, Javascript, AWS(EC2, S3, Redshift), Flask</li>
+          <li><strong>Databases:</strong> MySQL, Oracle, MongoDB, PySpark, Apache, Hadoop, Kafka</li>
+          <li><strong>Version Control, CI/CD:</strong> Git, GitHub, Jenkins, Docker, Kubernetes, MLflow</li>
+          <li><strong>Misc:</strong> Teamwork, Leadership, Problem-Solving, Professional Communication, Data Storytelling, Business Acumen</li>
         </ul>
       </div>
     </section>
