--- a/index.html
+++ b/index.html
@@ -365,13 +365,13 @@
     <div class="hero" data-fade="2">
       <h1>About</h1>
       <p class="subtitle">
-        I am driven by resilience, persistence, and an unwavering belief in staying true to my values. No matter how hard life hits, I keep moving forward — relentlessly, purposefully, and without compromise. I take on big challenges with courage, treat uncertainty as an opportunity, and approach life like a strategic game where every move matters.
+        I am driven by resilience, persistence, and an unwavering belief in staying true to my values. No matter how hard life hits, I keep moving forward relentlessly, purposefully, and without compromise. I take on big challenges with courage, treat uncertainty as an opportunity, and approach life like a strategic game where every move matters.
 
 As an all-rounder with a leadership mindset, I’m not afraid to stand alone, take risks, or push boundaries. I thrive in environments that demand innovation, ownership, and fast learning. My curiosity fuels me; my discipline sustains me.
 
-Professionally, I bring a growing breadth of experience across software engineering, data science, and cybersecurity. My work blends technical depth with strategic thinking — solving real problems, building scalable systems, and making data-driven decisions. I learn quickly, adapt even quicker, and commit fully to every project I take on.
+Professionally, I bring a growing breadth of experience across software engineering, data science, and cybersecurity. My work blends technical depth with strategic thinking solving real problems, building scalable systems, and making data-driven decisions. I learn quickly, adapt even quicker, and commit fully to every project I take on.
 
-I’m here to create impact, grow continuously, and contribute to meaningful, high-value work — while staying grounded in who I am and the principles I live by.
+I’m here to create impact, grow continuously, and contribute to meaningful, high-value work while staying grounded in who I am and the principles I live by.
       </p>
 
     </div>
