--- a/index.html
+++ b/index.html
@@ -178,6 +178,11 @@
       .card.half{grid-column:span 6}
     }
 
+    #school .card+ .card,
+    #volunteering .card+ .card{
+      margin-top:18px;
+    }
+
     .card-title{
       font-weight:700;
       font-size:1.05rem;
