--- a/index.html
+++ b/index.html
@@ -174,6 +174,15 @@
       border-color:rgba(212,175,55,.7);
       box-shadow:var(--shadow), 0 0 0 1px rgba(212,175,55,.7);
     }
+    
+    /* Red border highlight for volunteering cards */
+    #volunteering .card{
+    border:1px solid rgba(185,28,28,0.75) !important;
+    box-shadow:0 0 0 1px rgba(185,28,28,0.55), var(--shadow) !important;
+    }
+
+
+
     @media(min-width:720px){
       .card.half{grid-column:span 6}
     }
