--- a/index.html
+++ b/index.html
@@ -181,6 +181,18 @@
     box-shadow:0 0 0 1px rgba(185,28,28,0.55), var(--shadow) !important;
     }
 
+    /* Gold border highlight for certifications cards */
+    #certs .card{
+      border:1px solid var(--gold) !important;
+      box-shadow:0 0 0 1px rgba(212,175,55,0.55), var(--shadow) !important;
+    }
+
+/* Red border highlight for contact card */
+    #contact .card{
+       border:1px solid rgba(185,28,28,0.75) !important;
+       box-shadow:0 0 0 1px rgba(185,28,28,0.55), var(--shadow) !important;
+    }
+
 
 
     @media(min-width:720px){
@@ -370,7 +382,7 @@
         <a href="#experience">Work Experience</a>
         <a href="#school">School</a>
         <a href="#volunteering">Volunteering</a>
-        <a href="#certs">Certifications</a>
+        <a href="#skills">Skills</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
@@ -595,7 +607,7 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
 
 
     <!-- CERTIFICATIONS -->
-    <section id="certs" data-fade="3">
+    <section id="skills" data-fade="3">
       <h2><span class="section-kicker">Certifications</span>Skills</h2>
       <div class="card">
         <ul class="list">
