--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     }
 
     /* Gold border highlight for certifications cards */
-    #certs .card{
+    #skills .card{
       border:1px solid var(--gold) !important;
       box-shadow:0 0 0 1px rgba(212,175,55,0.55), var(--shadow) !important;
     }
