Adding detail desc

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Keerthi Kaushik Neelagiri • Portfolio</title>
+  <title>Keerthi Kaushik Neelagiri • Personal Website</title>
   <meta name="description" content="Keerthi Kaushik Neelagiri — Master's in Software Engineering @ UMD (Dec 2025). Building data-driven software. Open to SWE/Data roles."/>
   <meta property="og:title" content="Keerthi Kaushik Neelagiri — Portfolio"/>
   <meta property="og:description" content="Data-driven software engineer (UMD MS). Projects in media, construction, and healthcare."/>
@@ -391,13 +391,14 @@
     <div class="hero" data-fade="2">
       <h1>About</h1>
       <p class="subtitle">
-        I am driven by resilience, persistence, and an unwavering belief in staying true to my values. No matter how hard life hits, I keep moving forward relentlessly, purposefully, and without compromise. I take on big challenges with courage, treat uncertainty as an opportunity, and approach life like a strategic game where every move matters.
+        I am driven by resilience, persistence, and an unstoppable hunger to keep moving forward, no matter how hard life hits. I take on challenges with courage, treat uncertainty as fuel, and approach life like a strategic game where every move counts. As an all-rounder with a leadership mindset, I’m not afraid to stand alone, take risks, or push boundaries.
 
-As an all-rounder with a leadership mindset, I’m not afraid to stand alone, take risks, or push boundaries. I thrive in environments that demand innovation, ownership, and fast learning. My curiosity fuels me; my discipline sustains me.
+I bring fire, youth, passion, and relentless energy into everything I do. Fast-paced environments excite me. I thrive where innovation, ownership, and rapid learning are the norm. My curiosity pushes me forward; my discipline keeps me grounded. I’m goal-oriented, ambitious, and always ready for the next challenge.
 
-Professionally, I bring a growing breadth of experience across software engineering, data science, and cybersecurity. My work blends technical depth with strategic thinking solving real problems, building scalable systems, and making data-driven decisions. I learn quickly, adapt even quicker, and commit fully to every project I take on.
+Professionally, I bring a growing breadth of experience across software engineering, data science, and cybersecurity. My work blends technical depth with strategic thinking—solving real problems, building scalable systems, and making data-driven decisions. I learn quickly, adapt even faster, and commit fully to every project I take on.
 
-I’m here to create impact, grow continuously, and contribute to meaningful, high-value work while staying grounded in who I am and the principles I live by.
+I’m here to create impact, grow continuously, and contribute to meaningful, high-value work with drive, energy, and the mindset to go further every single day.
+
       </p>
 
     </div>
@@ -421,9 +422,13 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
             </div>
           </div>
           <ul class="list">
-            <li>Assisted with labs on forensic imaging, evidence handling, and incident triage.</li>
-            <li>Supported grading of assignments and projects, ensuring clear, actionable feedback.</li>
-            <li>Helped students reason about real-world intrusion scenarios and investigation workflows.</li>
+            <li> Assisted instructor in course delivery covering incident response six-step model (Preparation,
+ Identification, Containment, Eradication, Recovery, Lessons Learned) and legal aspects of digital
+ forensics.</li>
+            <li>Guided students in the use of forensic acquisition and analysis tools including dd, FTK Imager, DumpIt,
+ Scalpel, Foremost, Sleuthkit, SIFT Workstation, Volatility, RegRipper, and Supertimeline.</li>
+            <li>Supported lectures by clarifying technical concepts on disk and memory imaging, forensic reporting, and
+ data recovery best practices.</li>
           </ul>
         </div>
 
@@ -441,9 +446,12 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
             </div>
           </div>
           <ul class="list">
-            <li>Guided students through relational modelling, SQL, transactions, and indexing.</li>
-            <li>Led office hours to debug schema design and query performance issues.</li>
-            <li>Reviewed projects integrating web applications with backend databases.</li>
+            <li>Conduct weekly lab sessions, guiding students through practical database applications and ensuring a
+ hands-on learning experience.</li>
+            <li>Assist the professor in preparing instructional materials, grading assignments, and providing
+ constructive feedback to improve student performance.</li>
+            <li>Host interactive lab sessions to explain database concepts, including SQL, NoSQL, and database
+ integration with web applications.</li>
           </ul>
         </div>
 
@@ -461,9 +469,21 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
             </div>
           </div>
           <ul class="list">
-            <li>Maintained and extended ETL pipelines ingesting pharma data into an AWS-based data lake.</li>
-            <li>Worked across Dev/Prod/UAT environments, improving reliability and issue resolution time.</li>
-            <li>Collaborated with cross-functional teams to debug data quality and ingestion issues.</li>
+            <li>Collaborated with the data ingestion team for a pharmaceutical client, handling large-scale data
+ integration processing 100GB+ of data daily and ensuring seamless data flow across systems.</li>
+            <li>Managed and maintained development, production, and UAT environments, ensuring system stability
+ and resolving 95 percent of environment-related issues.</li>
+            <li>Led data migration efforts to the AWS cloud, transferring 5TB+ of data optimizing data storage and
+ improving accessibility using AWS services such as S3, Redshift, and RDS reducing retrieval time by 40
+ percent.</li>
+            <li>Using ETL tools to process and transform millions of records, contributing to the design and
+ maintenance of a centralized data lake.</li>
+            <li> Collaborated with cross-functional teams to implement best practices for data security and governance,
+ ensuring 100 percent compliance with regulatory standards such as HIPAA and GDPR.</li>
+            <li>Automated data pipelines using Python and AWS Lambda to streamline ingestion processes by
+ reducing manual effort by 60 percent and improving operational efficiency</li>
+            <li>Assisted in performance tuning and query optimization, enhancing the overall system performance and
+ reducing latency by 30 percent in data processing</li>
           </ul>
         </div>
 
@@ -481,9 +501,18 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
             </div>
           </div>
           <ul class="list">
-            <li>Trained on OFC, transmission networks, mobile communications, IoT, and 5G fundamentals.</li>
-            <li>Implemented a campus area virtual network using VLAN concepts under senior engineer guidance.</li>
-            <li>Observed day-to-day operations of telecom support infrastructure and network monitoring.</li>
+            <li>Designed and implemented a Campus Area Virtual Network (VLAN) for a college with 500+ users,
+ improving network segmentation and security.</li>
+            <li>Analyzed campus network requirements to define segmentation needs and security protocols for VLAN
+ implementation.</li>
+            <li>Designed and implemented 10+ VLANs to optimize network traffic and enhance security by isolating
+ network segments based on departments and user roles.</li>
+            <li>Applied IP addressing schemes and routing strategies to support the virtual network, improving network
+ management and reducing congestion.</li>
+            <li>Implemented Access Control Lists (ACL) to control access between VLANs, enhancing network security
+ compliance by 40 percent and controlling data flow at the packet level.</li>
+            <li>Performance testing and troubleshooting performed, reducing downtime by 20 percent through
+ proactive network optimizations.</li>
           </ul>
         </div>
       </div>
@@ -505,8 +534,16 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
           </div>
         </div>
         <ul class="list">
-          <li>Coursework: Databases for Web Apps, Secure Software Engineering, Digital Forensics & IR, Requirements Engineering.</li>
-          <li>Active in: AI/ML at UMD, Cinematheque, Table Tennis, Squash, Filmmakers, UNICEF, Yogi Terps.</li>
+          <li>ENPM 611: Software Engineering</li>
+          <li>ENPM 612: System and Software Requirements</li>
+          <li>ENPM 613: Software Design and Implementation</li>
+          <li>ENPM 614: Software Testing and Maintenance</li>
+          <li>ENPM 665: Cloud Security</li>
+          <li>ENPM 680: Introduction to Secure Software Engineering</li>
+          <li>ENPM 686: Information Assurance</li>
+          <li>ENPM 687: Digital Forensics and Incident Response</li>
+          <li>ENPM 818E:Software/Product Engineering 360: The Business of Engineering</li>
+          <li>BIOE 658J:Introduction to Programming and Data Analysis using Python</li>
         </ul>
       </div>
 
@@ -522,7 +559,10 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
           </div>
         </div>
         <ul class="list">
-          <li>Coursework: Introduction to Data Science, Introduction to Machine Learning, Probability & Statistics, Data Representation and Modelling.</li>
+          <li>DATA 601: Probability & Statistics</li>
+          <li>DATA 602: Priciples of Data Science</li>
+          <li>DATA 603: Principles of Machine Learning</li>
+          <li>DATA 604: Data Representation and Modelling</li>
         </ul>
       </div>
 
@@ -533,6 +573,17 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
             <div class="card-title">B.Tech, Electronics and Communication Engineering</div>
             <div class="meta-line">
               <span>Mahatma Gandhi Institute of Technology, Hyderabad</span>
+              <ul class="list">
+                 <li>151AC: Programming for Problem Solving</li>
+                 <li>155AV: Data Communications and Networks</li>
+                 <li>155AP: Computer Organization & Operating Systems</li>
+                 <li>15533: Cyber Security</li>
+                 <li>155CC: Object Oriented Programming through Java</li>
+                 <li>15629: Scripting Languages</li>
+                 <li>15633: Artificial Intelligence</li>
+                 <li>157BD: Database Management Systems</li>
+                 <li>157EY: Python Programming</li>
+              </ul>
               <span>July 2018 - July 2022</span>
             </div>
           </div>
@@ -668,7 +719,7 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
                 <path class="core" d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm-1.4 4.25-6.22 4.66a1 1 0 0 1-1.16 0L5 8.25V8l7 5 7-5v.25Z"/>
               </svg>
             </span>
-            <span>keerthikaushik99@gmail.com</span>
+            <span>E-m@il</span>
           </a>
 
           <a class="icon-link instagram" href="https://instagram.com/" target="_blank" rel="noopener">
