edited mgit courses

--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
         </div>
         <ul class="list">
           <li>DATA 601: Probability & Statistics</li>
-          <li>DATA 602: Priciples of Data Science</li>
+          <li>DATA 602: Principles of Data Science</li>
           <li>DATA 603: Principles of Machine Learning</li>
           <li>DATA 604: Data Representation and Modelling</li>
         </ul>
@@ -573,7 +573,11 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
             <div class="card-title">B.Tech, Electronics and Communication Engineering</div>
             <div class="meta-line">
               <span>Mahatma Gandhi Institute of Technology, Hyderabad</span>
-              <ul class="list">
+              <span>July 2018 - July 2022</span>
+            </div>
+          </div>
+        </div>
+        <ul class="list">
                  <li>151AC: Programming for Problem Solving</li>
                  <li>155AV: Data Communications and Networks</li>
                  <li>155AP: Computer Organization & Operating Systems</li>
@@ -584,10 +588,6 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
                  <li>157BD: Database Management Systems</li>
                  <li>157EY: Python Programming</li>
               </ul>
-              <span>July 2018 - July 2022</span>
-            </div>
-          </div>
-        </div>
       </div>
     </section>
 
