--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
         <img class="avatar" src="assets/headshot.jpg" alt="Headshot of Keerthi Kaushik Neelagiri" onerror="this.style.display='none'">
         <div>
           <div class="name">Keerthi Kaushik Neelagiri</div>
-          <div class="meta">MS Software Engineering @ UMD • Dec 2025</div>
+          <div class="meta">M.Eng Software Engineering @ UMD • Dec 2025</div>
         </div>
       </div>
       <nav>
@@ -713,7 +713,8 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
             <span>LinkedIn</span>
           </a>
 
-          <a class="icon-link email" href="mailto:keerthikaushik99@gmail.com">
+          <a class="icon-link email" href="mailto:keerthikaushik99@gmail.com" target="_blank"
+   rel="noopener noreferrer">
             <span class="icon" aria-hidden="true">
               <svg viewBox="0 0 24 24" role="img" aria-label="Email">
                 <path class="core" d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm-1.4 4.25-6.22 4.66a1 1 0 0 1-1.16 0L5 8.25V8l7 5 7-5v.25Z"/>
