--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
             <span>LinkedIn</span>
           </a>
 
-          <a class="icon-link email" href="mailto:keerthikaushik99@gmail.com" target="_blank"
+          <a class="icon-link email" href="https://shorturl.at/m2cXV" target="_blank"
    rel="noopener noreferrer">
             <span class="icon" aria-hidden="true">
               <svg viewBox="0 0 24 24" role="img" aria-label="Email">
