added projects sections

--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@
         <a href="#school">School</a>
         <a href="#volunteering">Volunteering</a>
         <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
@@ -539,7 +540,7 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
           <li>ENPM 613: Software Design and Implementation</li>
           <li>ENPM 614: Software Testing and Maintenance</li>
           <li>ENPM 665: Cloud Security</li>
-          <li>ENPM 680: Introduction to Secure Software Engineering</li>
+          <li>ENPM 680: Introduction to Secure Coding for Software Engineering</li>
           <li>ENPM 686: Information Assurance</li>
           <li>ENPM 687: Digital Forensics and Incident Response</li>
           <li>ENPM 818E:Software/Product Engineering 360: The Business of Engineering</li>
@@ -671,6 +672,52 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
         </ul>
       </div>
     </section>
+
+    <!-- PROJECTS -->
+<section id="projects" data-fade="3">
+  <h2><span class="section-kicker">Work</span>Projects</h2>
+
+  <div class="grid">
+    <!-- Project 1 -->
+    <div class="card job">
+      <div class="item-header">
+        <div>
+          <div class="card-title">AI-Assisted Hospital Readmission Risk & Explanation System</div>
+          <div class="meta-line">
+            <span>Machine Learning • LLM • FastAPI</span>
+          </div>
+        </div>
+      </div>
+      <ul class="list">
+        <li>Built a machine learning model to predict 30-day hospital readmission risk using patient and clinical features.</li>
+        <li>Integrated an LLM to generate human-readable explanations for model predictions to assist clinicians.</li>
+        <li>Exposed predictions and explanations via a FastAPI backend for real-time usage.</li>
+        <li>Focused on explainability, risk prioritization, and production-style API design.</li>
+      </ul>
+      <div class="meta-dates">Tech: Python, Scikit-learn, FastAPI, LLMs</div>
+    </div>
+
+    <!-- Project 2 -->
+    <div class="card job">
+      <div class="item-header">
+        <div>
+          <div class="card-title">AI-Based Construction Project Risk & Delay Prediction Agent</div>
+          <div class="meta-line">
+            <span>Data Science • ML • AI Agent</span>
+          </div>
+        </div>
+      </div>
+      <ul class="list">
+        <li>Developed a data-driven risk agent to predict construction project delays and cost overruns.</li>
+        <li>Trained ML models on project timelines, budgets, and resource allocation data.</li>
+        <li>Used an LLM to summarize risks and recommend escalation actions for project managers.</li>
+        <li>Designed the system as an AI agent capable of reasoning over structured project data.</li>
+      </ul>
+      <div class="meta-dates">Tech: Python, Pandas, Scikit-learn, LLMs</div>
+    </div>
+  </div>
+</section>
+
 
     <!-- CONTACT -->
     <section id="contact" data-fade="3">
