contact card color changed

--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
       box-shadow:0 0 0 1px rgba(212,175,55,0.55), var(--shadow) !important;
     }
 
-/* Red border highlight for contact card */
+/* Gold border highlight for contact card */
     #contact .card{
-       border:1px solid rgba(185,28,28,0.75) !important;
-       box-shadow:0 0 0 1px rgba(185,28,28,0.55), var(--shadow) !important;
+       border:1px solid var(--gold) !important;
+       box-shadow:0 0 0 1px rgba(212,175,55,0.55), var(--shadow) !important;
     }
 
 
