updated projects section

--- a/index.html
+++ b/index.html
@@ -682,38 +682,43 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
     <div class="card job">
       <div class="item-header">
         <div>
-          <div class="card-title">AI-Assisted Hospital Readmission Risk & Explanation System</div>
+          <div class="card-title">AI-Based Fraud Alert Triage & Analyst Explanation System</div>
           <div class="meta-line">
-            <span>Machine Learning • LLM • FastAPI</span>
+            <span>Machine Learning • Data Science  • AI Decision Support System</span>
           </div>
         </div>
       </div>
       <ul class="list">
-        <li>Built a machine learning model to predict 30-day hospital readmission risk using patient and clinical features.</li>
-        <li>Integrated an LLM to generate human-readable explanations for model predictions to assist clinicians.</li>
-        <li>Exposed predictions and explanations via a FastAPI backend for real-time usage.</li>
-        <li>Focused on explainability, risk prioritization, and production-style API design.</li>
+        <li>Architected an end-to-end machine learning system for fraud risk scoring and alert prioritization, leveraging PyTorch neural networks to generate calibrated probability estimates on highly imbalanced financial transaction data.</li>
+        <li>Implemented a supervised learning pipeline with feature standardization, stratified sampling, and cost-sensitive loss functions to address extreme class imbalance and improve high-risk recall.</li>
+        <li>Designed a decision-orchestration layer that separates model inference from business logic, converting risk scores into tiered alert priorities to reduce false positives and operational load.</li>
+        <li>Built an explainability module to generate audit-friendly, compliance-safe explanations, enabling human-in-the-loop review without automated enforcement.</li>
+        <li>Deployed the system behind a FastAPI-based REST service, supporting real-time inference, modular scalability, and integration with downstream fraud monitoring workflows.</li>
+        <li>Applied production ML best practices, including dependency isolation, reproducible environments, modular architecture, and API-first design.</li>
       </ul>
-      <div class="meta-dates">Tech: Python, Scikit-learn, FastAPI, LLMs</div>
+      <div class="meta-dates">Tech: Python, PyTorch, scikit-learn, Pandas, NumPy, FastAPI, Uvicorn, REST APIs, Supervised Learning, Neural Networks (MLP), Imbalanced Data Handling, Explainable AI, ML Pipelines</div>
     </div>
 
     <!-- Project 2 -->
     <div class="card job">
       <div class="item-header">
         <div>
-          <div class="card-title">AI-Based Construction Project Risk & Delay Prediction Agent</div>
+          <div class="card-title">AI Construction Project Delay & Cost Overrun Risk Agent</div>
           <div class="meta-line">
             <span>Data Science • ML • AI Agent</span>
           </div>
         </div>
       </div>
       <ul class="list">
-        <li>Developed a data-driven risk agent to predict construction project delays and cost overruns.</li>
-        <li>Trained ML models on project timelines, budgets, and resource allocation data.</li>
-        <li>Used an LLM to summarize risks and recommend escalation actions for project managers.</li>
-        <li>Designed the system as an AI agent capable of reasoning over structured project data.</li>
+        <li>Architected and implemented an end-to-end AI decision support system combining machine learning, agent-based reasoning, and LLM-driven explainability to predict construction schedule delays and cost overruns.</li>
+        <li>Developed and trained Random Forest classification models on domain-faithful synthetic data, achieving 93–95% accuracy with strong precision/recall across multiple risk classes.</li>
+        <li>Conducted exploratory data analysis (EDA) and feature validation to ensure alignment between construction KPIs, risk labels, and real-world project behavior prior to modeling.</li>
+        <li>Designed an AI agent orchestration layer to interpret ML predictions, apply deterministic business rules, and produce auditable escalation decisions and mitigation recommendations.</li>
+        <li>Integrated LLM-based explainability to translate agent decisions into concise, human-readable insights while constraining the LLM to a non-decision-making role.</li>
+        <li>Deployed the system as a production-style FastAPI inference service, enabling real-time risk assessment through JSON-based REST endpoints.</li>
+        <li>Applied human-in-the-loop AI and explainable AI (XAI) principles, prioritizing transparency, safety, and decision accountability over autonomous control.</li>
       </ul>
-      <div class="meta-dates">Tech: Python, Pandas, Scikit-learn, LLMs</div>
+      <div class="meta-dates">Tech: Python, Scikit-learn, Random Forest, FastAPI, Uvicorn, Pandas, NumPy, LLMs, REST APIs</div>
     </div>
   </div>
 </section>
