--- a/index.html
+++ b/index.html
@@ -282,6 +282,39 @@
     [data-fade="2"]{animation-delay:.06s}
     [data-fade="3"]{animation-delay:.12s}
     @keyframes fadeUp{to{opacity:1;transform:none}}
+
+
+
+    /* GitHub repo button for projects */
+.repo-btn{
+  display:inline-flex;
+  align-items:center;
+  gap:8px;
+  margin-top:12px;
+  padding:8px 14px;
+  border-radius:12px;
+  border:1px solid rgba(212,175,55,.8);
+  background:linear-gradient(135deg, rgba(185,28,28,.65), #050505);
+  color:#fff;
+  font-size:.9rem;
+  font-weight:600;
+  letter-spacing:.03em;
+  text-decoration:none;
+  box-shadow:0 0 0 1px rgba(0,0,0,.8);
+  transition:transform .15s ease, box-shadow .2s ease;
+}
+
+.repo-btn:hover{
+  transform:translateY(-1px);
+  box-shadow:0 0 0 1px var(--gold), 0 10px 26px rgba(212,175,55,.35);
+}
+
+.repo-btn svg{
+  width:18px;
+  height:18px;
+  fill:#ffffff;
+}
+
   </style>
 
   <style>
@@ -697,6 +730,14 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
         <li>Applied production ML best practices, including dependency isolation, reproducible environments, modular architecture, and API-first design.</li>
       </ul>
       <div class="meta-dates">Tech: Python, PyTorch, scikit-learn, Pandas, NumPy, FastAPI, Uvicorn, REST APIs, Supervised Learning, Neural Networks (MLP), Imbalanced Data Handling, Explainable AI, ML Pipelines</div>
+          <a class="repo-btn" href="https://github.com/NK-Kaushik/fraud-alert-system"
+   target="_blank" rel="noopener">
+  <svg viewBox="0 0 24 24" aria-hidden="true">
+    <path d="M12 .5a12 12 0 0 0-3.79 23.4c.6.11.82-.26.82-.58v-2.02c-3.34.73-4.04-1.61-4.04-1.61-.55-1.39-1.34-1.76-1.34-1.76-1.1-.76.08-.75.08-.75 1.22.08 1.86 1.26 1.86 1.26 1.08 1.85 2.83 1.31 3.52 1 .11-.79.42-1.31.76-1.61-2.66-.3-5.46-1.33-5.46-5.9 0-1.3.47-2.37 1.25-3.2-.13-.31-.54-1.56.12-3.25 0 0 1.01-.32 3.3 1.22a11.5 11.5 0 0 1 6 0c2.29-1.54 3.3-1.22 3.3-1.22.66 1.69.25 2.94.12 3.25.78.83 1.25 1.9 1.25 3.2 0 4.58-2.8 5.6-5.47 5.9.43.37.81 1.1.81 2.22v3.29c0 .32.22.69.82.58A12 12 0 0 0 12 .5z"/>
+  </svg>
+  View on GitHub
+</a>
+
     </div>
 
     <!-- Project 2 -->
