updated course work

--- a/index.html
+++ b/index.html
@@ -576,6 +576,7 @@ I’m here to create impact, grow continuously, and contribute to meaningful, hi
           <li>ENPM 680: Introduction to Secure Coding for Software Engineering</li>
           <li>ENPM 686: Information Assurance</li>
           <li>ENPM 687: Digital Forensics and Incident Response</li>
+          <li>ENPM 696: Reverse Software Engineering</li>
           <li>ENPM 818E:Software/Product Engineering 360: The Business of Engineering</li>
           <li>BIOE 658J:Introduction to Programming and Data Analysis using Python</li>
         </ul>
